# brain-agro

./: .coverage  .coveragerc  .env.modelo  .pre-commit-config.yaml  Dockerfile  README.md  agro_requirements.txt  fly.toml  pyproject.toml  startup.sh
agro/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py  views.py
api/serializers/: fazenda_serializer.py  query_serializers.py
base/: admin.py  models.py  util.py
base/management/commands/: fake_data.py
base/migrations/: 0001_initial.py  0002_fazenda_cultura.py
postman/: BRAIN-AGRO.json  Local.postman_environment.json  Produção.postman_environment.json
tests/: conftest.py
tests/api/: test_api.py
tests/serializers/: test_serializers.py
